# cats-or-dogs

./: .gitignore  README.md  pyproject.toml  setup.py
catsordogs/: __main__.py  classify.py
catsordogs.egg-info/: PKG-INFO  SOURCES.txt
src/: __main__.py
src/catsordogs/: __init__.py  classify.py  logfatal.py  pickimage.py  preprocess.py
